--- a/page/css/main/style.css
+++ b/page/css/main/style.css
@@ -1,225 +1,46 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+/* ===============================
+   🔥 ESTILO DAS FOTOS E NOMES DO SORTEIO
+   =============================== */
 
-:root {
-    --cor-fundo1: #F5F0DD;
-    --cor-fundo2: #2b3455;
-    --cor-letras01: #2b3455;
-    --cor-letras02: #2CBA80;  
-}
-
-html,
-body {
-    width: 1365px;
-    height: 860px;;
-    background-color: var(--cor-fundo2);
-}
-
-
-/* main style */
-
-main {
+.personBox {
     position: relative;
-    left: 70px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 1365px;
-    height: 860px;
-    
-    
-}
-
-#fundo {
-    position: absolute;
-    width: 1365px;    
-    height: 100vh;
-    left: 400px;
-    top: 0px;
-    opacity: 50%;    
-}
-
-/* form style */
-
-#sort {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 50%;
-    height: 1000px;
-}
-form {
-    width: 600px;
-    height: 100vh;
-    z-index: 1;
-    font-size: 25px;
-    color: var(--cor-letras01);
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-#sort fieldset {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 800px;
-    top: 45px;
-    border-style: none;
-    gap: 50px;
-    background-color: white;
-    border-bottom-left-radius: 45px;
-    border-bottom-right-radius: 45px;
-    border-top-left-radius: 45px;
-    border-top-right-radius: 45px;
-    box-shadow: 3px 3px 10px black;
-}
-
-fieldset ul {
-    padding-top: 15px;
-    text-align: Left;
-}
-
-.bton {
-    position: relative;
-    top: 60px;
-    width: 100%;
-    height: 55px;
-    z-index: 1;
-    color: var(--cor-letras02);
-    font-size: 25px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color: var(--cor-letras01);
-    border: none;
-    border-top-right-radius: 35px;
-    border-top-left-radius: 35px;
-    border-bottom-right-radius: 35px;
-    border-bottom-left-radius: 35px;
-}
-
-.bton:hover {
-    color: black;
-    font-size: 30px;
-    background: linear-gradient(
-        45deg,
-        black 10%,
-        var(--cor-letras02),        
-        black        
-        );
-        transition: 0.6s;   
-        box-shadow: 3px 3px 10px #2CBA80;
-        cursor: pointer;      
-    } 
-    
-    .bton:active{
-        color: white;
-        background: linear-gradient(
-            45deg,
-        black 10%,
-        var(--cor-fundo2),        
-        black        
-        );
-    }
-    
-    
-    li {
-        list-style: none;
-        padding: 3px;
-    }
-    
-    fieldset label {
-        cursor: pointer;
-    }
-
-    #capa {
-        width: 50%;
-}
-
-input[type=checkbox] {
-    display: none;
-}
-
-input[type=checkbox]:checked + label:before {
-    content: "\2713";  
-    color: var(--cor-letras02);     
-}
-
-#result {
-    position: relative;
-	width: 530px;
-	left: 30px;
-	top: 45px;
-	z-index: 1;
-	/* box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.651); */
-}
-
-h3 {
-    text-align: center;
-}
-
-#contador {
-    font-size: 100px;
-    top: 300px;
-    position: relative;
-    color: var(--cor-letras02);   
-    z-index: 1;
-}
-
-/* header style 
-header {
-    width: 1346px;
-    height: 114px;
-    text-align: center;
-}*/
-
-/*
-#img_header {
     display: inline-block;
-    position: relative;    
-}*/
-
-/*
-#img_header label {
-    position: absolute;
-    top: 40px;
-    width: 1346px;
-    color: var(--cor-letras01);
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin: 25px;
+    animation: fadeIn 1.8s ease-in-out forwards;
 }
-*/
 
-/*
-#sorteados {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+/* Foto sorteada */
+.photo {
+    height: 400px;
+    width: 300px;
+    border-radius: 45px;
+    box-shadow: 3px 3px 18px rgba(0,0,0,0.7);
+    display: block;
+    opacity: 0;
+    animation: fadeIn 1.8s ease-in-out forwards;
+}
+
+/* Nome com efeito + aparece mesmo sem imagem */
+.personName {
+    position: absolute;
+    bottom: 18px;
+    left: 0;
     width: 100%;
-    height: 100px;
-    top: 30px;
-    animação para os nomes aparecerem 
-}*/
-
-/*
-.orador1, .orador2 {
-    font-size: 28px ;
     text-align: center;
-    border: none;
-    background:none;
-    color: black;
-}*/
+    font-size: 35px;
+    font-weight: 900;
+    color: #fff;
+    letter-spacing: 1.5px;
+    text-shadow: 0px 0px 15px black;
+    opacity: 0;
+    animation: fadeIn 1.8s ease-in-out forwards;
+    z-index: 9999;  /* 🔥 Garantia absoluta que o nome aparece */
+}
 
-/*
-#o01, #o02 {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    background-color: white;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.651);
-    width: 280px;
-    border-bottom-left-radius: 50px;
-    border-bottom-right-radius: 50px;
-}*/
+/* Animação aplicada a foto + texto */
+@keyframes fadeIn {
+    0%   { opacity: 0; transform: scale(0.90); }
+    100% { opacity: 1; transform: scale(1); }
+}
+
+/* =============================== */
